--- a/css/style.css
+++ b/css/style.css
@@ -524,10 +524,6 @@ video {
   position: relative;
 }
 
-.top-48 {
-  top: 12rem;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -542,6 +538,10 @@ video {
 
 .top-0 {
   top: 0px;
+}
+
+.top-48 {
+  top: 12rem;
 }
 
 .z-50 {
@@ -613,6 +613,10 @@ video {
 
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-0 {
+  width: 0px;
 }
 
 .w-full {
@@ -695,6 +699,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -711,12 +721,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
 }
 
 .self-end {
@@ -746,6 +750,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -756,17 +765,12 @@ video {
   padding-bottom: 3rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.pl-10 {
+  padding-left: 2.5rem;
 }
 
 .pr-0 {
   padding-right: 0px;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
 }
 
 .pt-40 {
@@ -1029,7 +1033,7 @@ video {
   cursor:pointer;
   width:24px;
   height:24px;
-  transition:all 0.25s;
+  transition:all 0.5s;
   position:relative;
   z-index:50;
 }
@@ -1073,21 +1077,19 @@ video {
   display:none;
 }
 
+.underlined{
+  position:absolute;
+  height:2px;
+  background:#fff;
+  bottom:5px;
+  right:7px;
+  width:35px;
+  transition:width 0.5s;
+}
+
 .hover\:scale-95:hover {
   --tw-scale-x: .95;
   --tw-scale-y: .95;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-100:hover {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-105:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1218,6 +1220,8 @@ video {
     right: 0.75rem;
   }
 }
+
+
 
 
 
