--- a/input.css
+++ b/input.css
@@ -125,7 +125,7 @@
     height:2px;
     background:#fff;
     bottom:5px;
-    right:7px;
+    left:7px;
     width:35px;
     transition:width 0.5s;
    
